# ChangeLog for net-libs/libtorrent
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.113 2008/04/27 12:54:14 flameeyes Exp $

  27 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  files/libtorrent-0.11.9+gcc-4.3.patch:
  Update patch with the one from Philipp in bug #212824.

  21 Apr 2008; Diego Pettenò <flameeyes@gentoo.org>
  +files/libtorrent-0.11.9+gcc-4.3.patch, libtorrent-0.12.0.ebuild:
  Add patch to fix building with GCC 4.3 (taken from Debian). Closes bug
  #212824.

*libtorrent-0.12.0 (01 Mar 2008)

  01 Mar 2008; Timothy Redaelli <drizzt@gentoo.org>
  +libtorrent-0.12.0.ebuild:
  Version Bump wrt bug #209361
  Add ipv6 use flag wrt bug #207581

  06 Feb 2008; nixnut <nixnut@gentoo.org> libtorrent-0.11.9.ebuild:
  stable on ppc wrt bug #209140

  06 Feb 2008; Christoph Mende <angelos@gentoo.org>
  libtorrent-0.11.9.ebuild:
  Stable on amd64, bug #209140

  06 Feb 2008; Raúl Porcel <armin76@gentoo.org> -libtorrent-0.11.1.ebuild,
  -libtorrent-0.11.2.ebuild, -libtorrent-0.11.3.ebuild,
  -libtorrent-0.11.4.ebuild, libtorrent-0.11.9.ebuild:
  Add missing ipv6 support, bug #207581, remove old

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> libtorrent-0.11.9.ebuild:
  Stable on ppc64

  10 Jan 2008; Guy Martin <gmsoft@gentoo.org> libtorrent-0.11.9.ebuild:
  Added hppa to KEYWORDS.

  13 Nov 2007; Samuli Suominen <drac@gentoo.org> libtorrent-0.11.8.ebuild:
  amd64 stable wrt #198558

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> libtorrent-0.11.9.ebuild:
  Add ~ia64 wrt #198844

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> libtorrent-0.11.8.ebuild:
  Stable on ppc64; bug #198558

  09 Nov 2007; nixnut <nixnut@gentoo.org> libtorrent-0.11.8.ebuild:
  Stable on ppc wrt bug 198558

  09 Nov 2007; Dawid Węgliński <cla@gentoo.org> libtorrent-0.11.8.ebuild:
  Stable on x86 (bug #198558)

  25 Oct 2007; Timothy Redaelli <drizzt@gentoo.org>
  +libtorrent-0.11.9.ebuild: